--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,6 +15,8 @@ em {
   height: 100px;
   width: 100px;
   border: solid 1px lightgray;
+  background: url('http://images2.fanpop.com/images/photos/8400000/cute-cats-cats-8477446-600-600.jpg');
+  background-size: 100px 100px;
 }
 
 .button {
