--- a/ie8/stylesheet.css
+++ b/ie8/stylesheet.css
@@ -1,6 +1,6 @@
 .grocery {
   display: block;
-  margin-left: -40px;
+  margin-left: -1em;
   background-color: #ec8b68;
   color: #fff;
   border-top: 1px solid #fe9772;
@@ -10,7 +10,7 @@
   list-style-type: none;
   text-shadow: 2px 2px 1px #9f593f;
   height: 40px;
-  width: 230px;
+  width: 280px;
   padding-left: 1em;
   padding-top: 10px;
   cursor: pointer;
