--- a/flexbox.css
+++ b/flexbox.css
@@ -1,13 +1,6 @@
 ﻿.wrapper {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
-
-  -webkit-flex-flow: row wrap;
   flex-flow: row wrap;
-  text-align: center;
 }
 
 .wrapper > * {
@@ -15,9 +8,25 @@
   flex: 1 100%;
 }
 
+.header {
+  background: #FFEEEE;
+}
+
+.aside-1 {
+  background: #EEFFEE;
+}
+
 .main {
   text-align: left;
-  background: #eeffff;
+  background: #EEFFFF;
+}
+
+.aside-2 {
+  background: #FFFFEE;
+}
+
+.footer {
+  background: #EEEEFF;
 }
 
 @media all and (min-width: 600px) {
@@ -25,7 +34,7 @@
 }
 
 @media all and (min-width: 800px) {
-  .main    { flex: 2 0px; }
+  .main    { flex: 3 0px; }
   .aside-1 { order: 1; }
   .main    { order: 2; }
   .aside-2 { order: 3; }
