--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,6 +23,14 @@ textarea.code {
   background-color: black;
 }
 
+span.code {
+  font-family: Monaco, Consolas;
+  background-color: #EEEEEE;
+  font-size: 11pt;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
 input {
   font-size: 12pt;
 }
