--- a/stylesheet.css
+++ b/stylesheet.css
@@ -270,3 +270,12 @@ td.head {
   width: 1px;
   display: inline-block;
 }
+
+#movies {
+  padding-left: 0;
+}
+
+#movies li {
+  list-style-type: none;
+  padding-top: 0.5em;
+}
