--- a/stylesheet.css
+++ b/stylesheet.css
@@ -279,3 +279,16 @@ td.head {
   list-style-type: none;
   padding-top: 0.5em;
 }
+
+#jsweekly-links {
+  padding-left: 0;
+}
+
+#jsweekly-links li {
+  list-style-type: none;
+  padding-bottom: 0.5em;
+}
+
+#jsweekly-latest-content {
+  display: none;
+}
