--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -303,3 +303,10 @@ td.head {
 .js {
   display: none;
 }
+
+.pinned {
+  background-image: url("pin.png");
+  background-repeat: no-repeat;
+  background-size: 1em;
+  padding-left: 1em;
+}
