--- a/stylesheet/ie8/stylesheet.css
+++ b/stylesheet/ie8/stylesheet.css
@@ -13,16 +13,14 @@
   width: 280px;
   padding-left: 1em;
   padding-top: 10px;
-  cursor: pointer;
-}
+  cursor: pointer; }
 
 .hot {
   background-color: #d7666b;
   color: #fff;
   text-shadow: 2px 2px 1px #914141;
   border-top: 1px solid #e99295;
-  border-bottom: 1px solid #914141;
-}
+  border-bottom: 1px solid #914141; }
 
 .text {
   height: 2em;
@@ -34,8 +32,7 @@
   background-color: #008800;
   font-size: 12pt;
   padding-top: 1em;
-  text-align: center;
-}
+  text-align: center; }
 
 .item {
   height: 2em;
@@ -47,14 +44,13 @@
   background-color: lightgray;
   font-size: 12pt;
   padding-top: 1em;
-  text-align: center;
-}
+  text-align: center; }
 
 .fakewrapper {
-  padding: 10px;
-}
+  padding: 10px; }
 
 #catImages img {
   width: 250px;
-  height: 200px;
-}
+  height: 200px; }
+
+/*# sourceMappingURL=stylesheet.css.map */
