--- a/stylesheet/ie8/stylesheet.css
+++ b/stylesheet/ie8/stylesheet.css
@@ -6,7 +6,7 @@
   border-top: 1px solid #fe9772;
   border-bottom: 1px solid #9f593f;
   font-size: 24px;
-  letter-spacing: .05em;
+  letter-spacing: 0.05em;
   list-style-type: none;
   text-shadow: 2px 2px 1px #9f593f;
   height: 40px;
@@ -52,5 +52,3 @@
 #catImages img {
   width: 250px;
   height: 200px; }
-
-/*# sourceMappingURL=stylesheet.css.map */
