Refactor script.js into modules.

--- a/src/_cat.scss
+++ b/src/_cat.scss
@@ -7,8 +7,9 @@
   height: 5em;
   width: 5em;
   border: solid 1px lightgray;
-  background: url('http://www.catpichub.com/wp-content/uploads/2014/08/cute-cat-wallpaper-14001050-53f173c8980de-500x500.png');
+  background: $catImage;
   background-size: 5em 5em;
+  background-repeat: no-repeat;
 }
 
 #catImages {
