--- a/src/_config.scss
+++ b/src/_config.scss
@@ -23,3 +23,5 @@ $jsWeeklyLinkHover: #bb0055;
 $tableDefault: #DDDDFF;
 $tableHead: #CCCC99;
 $tableData: #DDDDDD;
+
+$catImage: url('http://images2.fanpop.com/images/photos/8400000/cute-cats-cats-8477446-600-600.jpg');
