--- a/src/_config.scss
+++ b/src/_config.scss
@@ -24,4 +24,4 @@ $tableDefault: #DDDDFF;
 $tableHead: #CCCC99;
 $tableData: #DDDDDD;
 
-$catImage: url('http://images2.fanpop.com/images/photos/8400000/cute-cats-cats-8477446-600-600.jpg');
+$catImage: url('http://lovemeow.com/wp-content/uploads/2011/01/kitten1.jpg');
