Add a new style class to handle the display on load.

--- a/src/scss/_flexbox.scss
+++ b/src/scss/_flexbox.scss
@@ -18,7 +18,6 @@
 }
 
 .aside-1 {
-  display: none;
   background: $backgroundAsideLeft;
 
   @media all and (min-width: 1000px) {
@@ -29,7 +28,6 @@
 }
 
 .main {
-  display: none;
   text-align: left;
   background: $backgroundArticle;
 
@@ -43,7 +41,6 @@
 }
 
 .aside-2 {
-  display: none;
   background: $backgroundAsideRight;
 
   @media all and (min-width: 1000px) {
@@ -54,7 +51,6 @@
 }
 
 .footer {
-  display: none;
   background: $backgroundFooter;
 
   @media all and (min-width: 1000px) {
@@ -70,4 +66,8 @@
 
     flex: 1 auto;
   }
+}
+
+.delayed {
+  display: none;
 }
