--- a/src/scss/_article.scss
+++ b/src/scss/_article.scss
@@ -3,7 +3,7 @@
 }
 
 .pinned {
-  background-image: url("pin.png");
+  background-image: url("/images/pin.png");
   background-repeat: no-repeat;
   background-size: 1em;
   padding-left: 1em;
