--- a/src/scss/_mouse.scss
+++ b/src/scss/_mouse.scss
@@ -9,31 +9,31 @@
 }
 
 .mouse-right {
-  background-image: url("right.gif");
+  background-image: url("/images/right.gif");
 }
 
 .mouse-right-up {
-  background-image: url("right-up.gif");
+  background-image: url("/images/right-up.gif");
 }
 
 .mouse-right-down {
-  background-image: url("right-down.gif");
+  background-image: url("/images/right-down.gif");
 }
 
 .mouse-left {
-  background-image: url("left.gif");
+  background-image: url("/images/left.gif");
 }
 
 .mouse-left-up {
-  background-image: url("left-up.gif");
+  background-image: url("/images/left-up.gif");
 }
 
 .mouse-left-down {
-  background-image: url("left-down.gif");
+  background-image: url("/images/left-down.gif");
 }
 
 .mouse-win {
-  background-image: url("win.gif");
+  background-image: url("/images/win.gif");
 }
 
 .mouse-preload {
