--- a/public/ie8/ie8.css
+++ b/public/ie8/ie8.css
@@ -1,5 +1,1 @@
-#catImages > li > img {
-  behavior: url(pie.htc);
-  position: relative;
-  zoom: 1;
-}
+#catImages>li>img{behavior:url(pie.htc);position:relative;zoom:1}
