--- a/src/private/css/stylesheet.css
+++ b/src/private/css/stylesheet.css
@@ -22,7 +22,7 @@ body {
 }
 
 #header-image img {
-  background-attachment: fixed;
+  background-attachment: scroll;
   width: 100%;
   height: 100%;
   background-size: cover;
