--- a/src/private/css/stylesheet.css
+++ b/src/private/css/stylesheet.css
@@ -163,4 +163,40 @@ label {
 
 .contrast {
   -webkit-filter: contrast(300%);
+  filter: contrast(300%);
+}
+
+.drop-shadow {
+  -webkit-filter: drop-shadow(16px 16px 10px black);
+  filter: drop-shadow(16px 16px 10px black);
+}
+
+.grayscale {
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+}
+
+.hue-rotate {
+  -webkit-filter: hue-rotate(90deg);
+  filter: hue-rotate(90deg);
+}
+
+.invert {
+  -webkit-filter: invert(100%);
+  filter: invert(100%);
+}
+
+.opacity {
+  -webkit-filter: opacity(50%);
+  filter: opacity(50%);
+}
+
+.saturate {
+  -webkit-filter: saturate(200%);
+  filter: saturate(200%);
+}
+
+.sepia {
+  -webkit-filter: sepia(100%);
+  filter: sepia(100%);
 }
