--- a/src/private/css/stylesheet.css
+++ b/src/private/css/stylesheet.css
@@ -215,12 +215,15 @@ label {
 
 @keyframes anim-blur {
   0% {
+    -webkit-filter: blur(5px);
     filter: blur(5px);
   }
   50% {
+    -webkit-filter: blur(0px);
     filter: blur(0px);
   }
   100% {
+    -webkit-filter: blur(5px);
     filter: blur(5px);
   }
 }
@@ -244,12 +247,15 @@ label {
 
 @keyframes anim-brightness {
   0% {
+    -webkit-filter: brightness(0.2);
     filter: brightness(0.2);
   }
   50% {
+    -webkit-filter: brightness(1.0);
     filter: brightness(1.0);
   }
   100% {
+    -webkit-filter: brightness(0.2);
     filter: brightness(0.2);
   }
 }
@@ -273,12 +279,15 @@ label {
 
 @keyframes anim-contrast {
   0% {
+    -webkit-filter: contrast(300%);
     filter: contrast(300%);
   }
   50% {
+    -webkit-filter: contrast(0);
     filter: contrast(0);
   }
   100% {
+    -webkit-filter: contrast(300%);
     filter: contrast(300%);
   }
 }
@@ -302,12 +311,15 @@ label {
 
 @keyframes anim-drop-shadow {
   0% {
+    -webkit-filter: drop-shadow(16px 16px 10px black);
     filter: drop-shadow(16px 16px 10px black);
   }
   50% {
+    -webkit-filter: drop-shadow(0px 0px 0px black);
     filter: drop-shadow(0px 0px 0px black);
   }
   100% {
+    -webkit-filter: drop-shadow(16px 16px 10px black);
     filter: drop-shadow(16px 16px 10px black);
   }
 }
@@ -331,12 +343,15 @@ label {
 
 @keyframes anim-grayscale {
   0% {
+    -webkit-filter: grayscale(100%);
     filter: grayscale(100%);
   }
   50% {
+    -webkit-filter: grayscale(0);
     filter: grayscale(0);
   }
   100% {
+    -webkit-filter: grayscale(100%);
     filter: grayscale(100%);
   }
 }
@@ -360,12 +375,15 @@ label {
 
 @keyframes anim-hue-rotate {
   0% {
+    -webkit-filter: hue-rotate(90deg);
     filter: hue-rotate(90deg);
   }
   50% {
+    -webkit-filter: hue-rotate(270deg);
     filter: hue-rotate(270deg);
   }
   100% {
+    -webkit-filter: hue-rotate(450deg);
     filter: hue-rotate(450deg);
   }
 }
@@ -389,12 +407,15 @@ label {
 
 @keyframes anim-invert {
   0% {
+    -webkit-filter: invert(100%);
     filter: invert(100%);
   }
   50% {
+    -webkit-filter: invert(0);
     filter: invert(0);
   }
   100% {
+    -webkit-filter: invert(100%);
     filter: invert(100%);
   }
 }
@@ -424,18 +445,23 @@ label {
 
 @keyframes anim-opacity {
   0% {
+    -webkit-filter: opacity(50%);
     filter: opacity(50%);
   }
   25% {
+    -webkit-filter: opacity(0);
     filter: opacity(0);
   }
   50% {
+    -webkit-filter: opacity(50%);
     filter: opacity(50%);
   }
   75% {
+    -webkit-filter: opacity(100%);
     filter: opacity(100%);
   }
   100% {
+    -webkit-filter: opacity(50%);
     filter: opacity(50%);
   }
 }
@@ -459,12 +485,15 @@ label {
 
 @keyframes anim-saturate {
   0% {
+    -webkit-filter: saturate(200%);
     filter: saturate(200%);
   }
   50% {
+    -webkit-filter: saturate(0);
     filter: saturate(0);
   }
   100% {
+    -webkit-filter: saturate(200%);
     filter: saturate(200%);
   }
 }
@@ -488,12 +517,15 @@ label {
 
 @keyframes anim-sepia {
   0% {
+    -webkit-filter: sepia(100%);
     filter: sepia(100%);
   }
   50% {
+    -webkit-filter: sepia(0);
     filter: sepia(0);
   }
   100% {
+    -webkit-filter: sepia(100%);
     filter: sepia(100%);
   }
 }
