--- a/src/private/css/stylesheet.css
+++ b/src/private/css/stylesheet.css
@@ -201,9 +201,14 @@ label {
   filter: sepia(100%);
 }
 
-.url {
+.turbulence {
   -webkit-filter: url(#turbulence);
   filter: url(#turbulence);
+}
+
+.fractal-noise {
+  -webkit-filter: url(filters.svg#fractalNoise);
+  filter: url(filters.svg#fractalNoise);
 }
 
 @-webkit-keyframes anim-blur {
