--- a/src/private/css/stylesheet.css
+++ b/src/private/css/stylesheet.css
@@ -207,8 +207,8 @@ label {
 }
 
 .fractal-noise {
-  -webkit-filter: url(filters.svg#fractalNoise);
-  filter: url(filters.svg#fractalNoise);
+  -webkit-filter: url(filters.xml#fractalNoise);
+  filter: url(filters.xml#fractalNoise);
 }
 
 @-webkit-keyframes anim-blur {
