--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -24,4 +24,4 @@ $tableDefault: #DDDDFF;
 $tableHead: #CCCC99;
 $tableData: #DDDDDD;
 
-$catImage: url('http://lovemeow.com/wp-content/uploads/2011/01/kitten1.jpg');
+$catImage: url('/images/cat.svg');
