--- a/src/scss/_article.scss
+++ b/src/scss/_article.scss
@@ -9,32 +9,35 @@
   padding-left: 1em;
 }
 
-.sticky {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 1px;
-  z-index: 1;
-  outline-width: 1px;
-  outline-style: solid;
-  outline-color: invert;
-}
-
 article {
-  padding: 0 !important;
+  > section > h3 {
+    cursor: pointer;
+  }
 
-  > section {
-    > p, table {
-      padding: 0 10px 0 10px;
-    }
+  &.sticky {
+    padding: 0 !important;
 
-    > ul, ol {
-      padding-left: 34px;
-    }
-    > h3 {
-      background: $backgroundArticle;
-      margin: 1px;
-      padding: 1em 10px 1em 10px !important;
-      cursor: pointer;
+    > section {
+      > p, table {
+        padding: 0 10px 0 10px;
+      }
+
+      > ul, ol {
+        padding-left: 34px;
+      }
+
+      > h3 {
+        position: -webkit-sticky;
+        position: sticky;
+        top: 1px;
+        z-index: 1;
+        outline-width: 1px;
+        outline-style: solid;
+        outline-color: invert;
+        background: $backgroundArticle;
+        margin: 1px;
+        padding: 1em 10px 1em 10px !important;
+      }
     }
   }
 }
