--- a/src/scss/_mouse.scss
+++ b/src/scss/_mouse.scss
@@ -1,5 +1,11 @@
+$floorColor: #eee;
+
 #floor {
-  background-color: #eee;
+  background-color: $floorColor;
+
+  @media screen and (prefers-color-scheme: dark) {
+    background-color: darken($floorColor, $darken);
+  }
 }
 
 #mouse {
