--- a/src/scss/_tags.scss
+++ b/src/scss/_tags.scss
@@ -10,8 +10,16 @@ a {
   text-decoration: none;
   color: $linkDefault;
 
+  @media screen and (prefers-color-scheme: dark) {
+    color: $darkModeText;
+  }
+
   &:hover {
     color: $linkHover;
+
+    @media screen and (prefers-color-scheme: dark) {
+      color: white;
+    }
   }
 }
 
@@ -21,6 +29,11 @@ em {
 
 input {
   font-size: 12pt;
+
+  @media screen and (prefers-color-scheme: dark) {
+    background-color: transparent;
+    color: $darkModeText;
+  }
 }
 
 ol {
