--- a/src/scss/_block.scss
+++ b/src/scss/_block.scss
@@ -1,3 +1,5 @@
+$activeColor: #BCD2EE;
+
 .button {
   display: none;
   margin-left: 5px;
@@ -13,7 +15,12 @@
 }
 
 .active {
-  background-color: #BCD2EE;
+  background-color: $activeColor;
+
+  @media screen and (prefers-color-scheme: dark) {
+    background-color: darken($activeColor, $darken);
+    color: $darkModeText;
+  }
 }
 
 .disabled {
