--- a/src/scss/_code.scss
+++ b/src/scss/_code.scss
@@ -15,6 +15,10 @@ span {
     font-size: 11pt;
     padding-left: 5px;
     padding-right: 5px;
+
+    @media screen and (prefers-color-scheme: dark) {
+      background-color: darken($backgroundCode, $darken);
+    }
   }
 }
 
@@ -23,5 +27,9 @@ td {
     font-family: $codeFonts;
     background-color: $backgroundCode;
     font-size: 10pt;
+
+    @media screen and (prefers-color-scheme: dark) {
+      background-color: darken($backgroundCode, $darken);
+    }
   }
 }
