--- a/src/scss/_flexbox.scss
+++ b/src/scss/_flexbox.scss
@@ -15,6 +15,11 @@
 
 .header {
   background: $backgroundHeader;
+
+  @media screen and (prefers-color-scheme: dark) {
+    background: darken($backgroundHeader, $darken);
+    color: $darkModeText;
+  }
 }
 
 .aside-1 {
@@ -24,6 +29,11 @@
     -webkit-order: 1;
 
     order: 1;
+  }
+
+  @media screen and (prefers-color-scheme: dark) {
+    background: darken($backgroundAsideLeft, $darken);
+    color: $darkModeText;
   }
 }
 
@@ -38,6 +48,11 @@
     order: 2;
     flex: 3 0px;
   }
+
+  @media screen and (prefers-color-scheme: dark) {
+    background: darken($backgroundArticle, $darken);
+    color: $darkModeText;
+  }
 }
 
 .aside-2 {
@@ -48,6 +63,11 @@
 
     order: 3;
   }
+
+  @media screen and (prefers-color-scheme: dark) {
+    background: darken($backgroundAsideRight, $darken);
+    color: $darkModeText;
+  }
 }
 
 .footer {
@@ -57,6 +77,11 @@
     -webkit-order: 4;
 
     order: 4;
+  }
+
+  @media screen and (prefers-color-scheme: dark) {
+    background: darken($backgroundFooter, $darken);
+    color: $darkModeText;
   }
 }
 
