remove flash of white

--- a/src/scss/_tags.scss
+++ b/src/scss/_tags.scss
@@ -4,6 +4,10 @@
 
 body {
   margin: 0px;
+
+  @media screen and (prefers-color-scheme: dark) {
+    background-color: $darkModeBackground;
+  }
 }
 
 a {
