cant simply swap css vars to support; maybe a pain for large sites

--- a/src/scss/_block.scss
+++ b/src/scss/_block.scss
@@ -26,6 +26,10 @@ $activeColor: #BCD2EE;
 .disabled {
   color: lightgray;
   cursor: not-allowed;
+
+  @media screen and (prefers-color-scheme: dark) {
+    color: darkgray;
+  }
 }
 
 .listener {
