Revert "dark mode fun"
This reverts commit bc6223a9d27818f2e171c9a0658eb1fc7522f7ba.

--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -24,7 +24,9 @@ $tableDefault: #DDDDFF;
 $tableHead: #CCCC99;
 $tableData: #DDDDDD;
 
-$catImage: url('/images/cat.svg');
+$activeBlockBackground: #BCD2EE;
+$disabledBlockText: lightgray;
 
-$darken: 75%;
-$darkModeText: lightgray;
+$floorBackground: #eee;
+
+$catImage: url('/images/cat.svg');
