--- a/src/scss/_block.scss
+++ b/src/scss/_block.scss
@@ -1,5 +1,3 @@
-$activeColor: #BCD2EE;
-
 .button {
   display: none;
   margin-left: 5px;
@@ -15,16 +13,11 @@ $activeColor: #BCD2EE;
 }
 
 .active {
-  background-color: $activeColor;
-
-  @media screen and (prefers-color-scheme: dark) {
-    background-color: darken($activeColor, $darken);
-    color: $darkModeText;
-  }
+  background-color: $activeBlockBackground;
 }
 
 .disabled {
-  color: lightgray;
+  color: $disabledBlockText;
   cursor: not-allowed;
 }
 
