--- a/src/scss/_tags.scss
+++ b/src/scss/_tags.scss
@@ -8,10 +8,10 @@ body {
 
 a {
   text-decoration: none;
-  color: $linkDefault;
+  color: var(--link-default);
 
   &:hover {
-    color: $linkHover;
+    color: var(--link-hover);
   }
 }
 
