define text color

--- a/src/scss/_article.scss
+++ b/src/scss/_article.scss
@@ -37,6 +37,7 @@ article {
         background: var(--background-article);
         margin: 1px;
         padding: 1em 10px 1em 10px !important;
+        color: var(--text);
       }
     }
   }
