--- a/src/scss/_code.scss
+++ b/src/scss/_code.scss
@@ -11,7 +11,7 @@ textarea {
 span {
   &.code {
     font-family: $codeFonts;
-    background-color: $backgroundCode;
+    background-color: var(--background-code);
     font-size: 11pt;
     padding-left: 5px;
     padding-right: 5px;
@@ -21,7 +21,7 @@ span {
 td {
   &.code {
     font-family: $codeFonts;
-    background-color: $backgroundCode;
+    background-color: var(--background-code);
     font-size: 10pt;
   }
 }
